--- a/src/style.css
+++ b/src/style.css
@@ -63,14 +63,14 @@ nav a:focus {
 	transform: translateY(-10px);
 }
   
-.cl-effect a:hover::after,
-.cl-effect a:focus::after {
+.cl-effect a:hover::after {
 	height: 5px;
 	opacity: 1;
 	-webkit-transform: translateY(0px);
 	-moz-transform: translateY(0px);
 	transform: translateY(0px);
 }
+
 
 .cl-effect a:active::after {
   -webkit-transform: translateY(-10px);
