--- a/src/style.css
+++ b/src/style.css
@@ -6,13 +6,21 @@
   box-sizing: border-box;
 }
 
+.app,
+.app-footer,
+.nav,
+.sidebar-left,
+.sidebar-right {
+  min-width: 350px;
+  max-width: 100%;
+}
+
 .app {
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #005858;
-  margin: -1vw;
   height: 100%;
 }
 
@@ -28,7 +36,6 @@ nav {
   padding-top: 1.5em;
   background: #FFF;
   border-bottom: #005858 solid 2px;
-  min-width: 350px;
 }
 
 nav a {
